<resources>
    <string name="app_name">HarryPotter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spell_guide">Spell guide</string>
    <string name="all_houses">All houses</string>
    <string name="gryffindor">Gryffindor</string>
    <string name="slytherin">Slytherin</string>
    <string name="hufflepuff">Hufflepuff</string>
    <string name="ravenclaw">Ravenclaw</string>
    <string name="characters">Characters</string>
    <string name="additional_info">Additional info</string>
    <string name="learn_new_spell">Learn new spell</string>
    <string name="change_house">Change house</string>
    <string name="learned_spells">Learned spells</string>
    <string name="spells_to_learn">Spells To Learn</string>
</resources>