<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/house_backg">


    <HorizontalScrollView
        android:id="@+id/houseRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/allHouses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/all_houses"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gryffindorFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/gryffindor"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/slytherinFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/slytherin"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/hufflepuffFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/hufflepuff"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ravenclawFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/ravenclaw"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/allCharsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/characters"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/houseRow" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/charactersRcView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/allCharsHeader" />
</androidx.constraintlayout.widget.ConstraintLayout>